2015-11-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\onepageout): Use \thischapterheading for 
	\thischapter but sometimes blank, and don't change \thischapter.
	This means that @everyheading @thischapter @| @| does what it 
	did before.
	(\HEADINGSdouble, \HEADINGSsingle, \HEADINGSdoublex, \HEADINGSsinglex):
	Use \thischapterheading.

2015-11-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/xspara.c: Change // comments 
	to /* ... */ style.  Remove commented-out lines for debugging.

2015-11-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/variables.c (info_variables): Rename
	hl-ref-rendition to active-link-style,
	ref-rendition to link-style,
	match-rendition to match-style.
	* NEWS: Update.
	* doc/info-stnd.texi (Colors and Styles): Update.

2015-11-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/ParagraphNonXS.pm (_add_next): Don't count 
	DEL bytes in width of word.
	* tp/t/results/plaintext_tests/
	quote_node_names/res_plaintext/quote_node_names.txt: Update.

2015-11-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/README: Mention run_all function.
	* tp/t/test_utils.pl (test, run_all, output_texi_file): Comments 
	added.

2015-11-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/plaintext.t (quote_node_names): New test.
	* tp/t/input_files/nodequote.texi: Input file.
	* tp/t/results/plaintext_tests/
	quote_node_names/res_plaintext/quote_node_names.txt: Reference 
	output file.
	* tp/Makefile.am (test_files): Add nodequote.texi.

2015-11-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Mention problem with "make dist" and XS modules.

2015-11-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-tex-test.texi: Add examples of space between macro 
	name and opening brace.

2015-11-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\entry): For multi-line entries, use a \strut 
	on first and last lines.  Comments changed or removed.