@@ -1,5 +1,11 @@
 2015-11-22  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* info/infodoc.c (info_get_info_help_node): Resort to 
+	"(info-stnd)" if "(info)" isn't found.  Look for "(info)" 
+	instead of "(Info)".
+
+2015-11-22  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* doc/texinfo.tex (\onepageout): Use \thischapterheading for 
 	\thischapter but sometimes blank, and don't change \thischapter.
 	This means that @everyheading @thischapter @| @| does what it 
